Fix signup class background color bleeding to outer box

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     margin: 0;
 }
 
-.extra,
+.signup,
 .signup-button {
     background-color: #3882F6;
 }
@@ -173,4 +173,8 @@ ul.links {
 .quote .author {
     text-align: right;
     padding-right: 50px;
+}
+
+.extra {
+    padding: 100px 200px;
 }
